--- a/Reálná data.ipynb
+++ b/Reálná data.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from math import sqrt, factorial, isnan\n",
@@ -42,18 +40,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#HMM = GaussianHMM(2) # zavedu co potřebuju\n",
     "#validace = CL.validuj(GaussianHMM(3), train_data[1], train_data[1], Labely, range(2,11)) #[0,0,1,1,1]\n",
-    "validace = CL.validuj(GaussianHMM(3), [train_data[1],train_data[1]], train_data[1], np.ones(len(train_data[1])), 10, [0,0,1,1,1])"
+    "validace = CL.validuj(GaussianHMM(3), [train_data[1],train_data[1]], train_data[1], np.ones(len(train_data[1])), 10, [0,0,1,1,1], True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +97,7 @@
        "      <td>(0, 0, 1, 1, 1)</td>\n",
        "      <td>10</td>\n",
        "      <td>0.4415</td>\n",
-       "      <td>2234.0</td>\n",
+       "      <td>2234</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.612556</td>\n",
        "      <td>0.0</td>\n",
@@ -116,7 +114,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0000</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
@@ -133,9 +131,9 @@
        "</div>"
       ],
       "text/plain": [
-       "    Kombinace rysů  délka úseku  Accuracy   Chyby  F míra stavu 0  \\\n",
-       "0  (0, 0, 1, 1, 1)           10    0.4415  2234.0             0.0   \n",
-       "1                0            0    0.0000     0.0             0.0   \n",
+       "    Kombinace rysů  délka úseku  Accuracy  Chyby  F míra stavu 0  \\\n",
+       "0  (0, 0, 1, 1, 1)           10    0.4415   2234             0.0   \n",
+       "1                0            0    0.0000      0             0.0   \n",
        "\n",
        "   F míra stavu 1  F míra stavu 2  F míra průměrná  Precision stavu 0  \\\n",
        "0        0.612556             0.0         0.204185                0.0   \n",
@@ -150,7 +148,7 @@
        "1             0.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,15 +156,6 @@
    "source": [
     "validace.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
