Pokusy o vylepšení modelu pomocí init_params mean a var

--- a/New view on HMM.ipynb
+++ b/New view on HMM.ipynb
@@ -40,18 +40,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 489,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Record number: ', '15312'],\n",
+       "      dtype='<U15')"
+      ]
+     },
+     "execution_count": 489,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "X = np.load(way1 + \"No106.npy\")"
+    "X = np.load(way1 + \"No106.npy\")\n",
+    "np.load(way1 + \"No106_info.npy\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 490,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +859,7 @@
     }
    ],
    "source": [
-    "plt.figure(\"Data\")\n",
+    "plt.figure(\"Data s labely podle databáze\")\n",
     "plt.plot(X[0], X[1])\n",
     "plt.scatter(X[0],X[1], c = X[2] , cmap = plt.cm.plasma)\n",
     "plt.show()"
