--- a/S-G modifikace.ipynb
+++ b/S-G modifikace.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +47,7 @@
     "    \n",
     "    coeffs = savgol_coeffs(window_length, polyorder, pos = window_length-1, deriv=deriv)\n",
     "\n",
-    "    y = convolve1d(x, coeffs, axis=axis, mode=mode, cval=cval)\n",
+    "    y = convolve1d(x, coeffs, axis=axis, mode=mode, cval=0.0)\n",
     "\n",
     "    return y"
    ]
@@ -2478,7 +2478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
