--- a/S-G modifikace.ipynb
+++ b/S-G modifikace.ipynb
@@ -38,15 +38,16 @@
    },
    "outputs": [],
    "source": [
-    "def S_G(x, window_length, polyorder, deriv=0, axis=-1, mode='mirror'):\n",
-    "\n",
+    "def S_G(x, window_length, polyorder, deriv=0, axis=-1, mode='nearest'):\n",
+    "    \n",
+    "    #okraje mám defaulte pomocí nearest => nakopíruje krajní body\n",
     "    if mode not in [\"mirror\", \"nearest\", \"wrap\"]:\n",
     "        raise ValueError(\"mode must be 'mirror', 'nearest' or 'wrap'\")\n",
     "\n",
     "    x = np.asarray(x)\n",
-    "    \n",
+    "    # Nastavli jsem, aby se koeficienty počítaly v posledním bodě -> pos = window_lenght-1\n",
     "    coeffs = savgol_coeffs(window_length, polyorder, pos = window_length-1, deriv=deriv)\n",
-    "\n",
+    "    # dále používám stejnou konvoluci jako je v originále\n",
     "    y = convolve1d(x, coeffs, axis=axis, mode=mode, cval=0.0)\n",
     "\n",
     "    return y"
