--- a/S-G modifikace.ipynb
+++ b/S-G modifikace.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## testovat budu třeba na gausovce"
+    "## testovat budu třeba na gaussovce"
    ]
   },
   {
@@ -4089,7 +4089,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test na 1. derivaci gausovky"
+    "## Test na 1. derivaci gaussovky"
    ]
   },
   {
